--- a/web_frontend/package.json
+++ b/web_frontend/package.json
@@ -13,6 +13,7 @@
     "@emoji-mart/react": "^1.1.1",
     "axios": "^1.7.7",
     "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.12.0",
     "next": "^14.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
